# world-simulations

./: CMakeLists.txt  Makefile  README.textile
gfx/: environment.blend  environment_celling.h  environment_walls.h
scripts/: obj2opengl.pl
shaders/: terrain_fragment.glsl  terrain_vertex.glsl  wall_fragment.glsl  wall_vertex.glsl
src/: CMakeLists.txt  environment.c  font.c  font_helvetica_17_def.h  font_helvetica_17_img.h  font_monaco_12_def.h  font_monaco_12_img.h  game.c  game.h  heightmap.c  main.c  materials.c  picking.c  player.c  simplex.c  solver.c  textures.c  util.c  util.h  vec3.c  vec3.h  world.c  world.h
